# focusflow-openenv

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  debug_validate.json  deploy_hf.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tracker.py  validation_2.json  validation_ok.json  validation_result.txt  verify_env.py
env/: __init__.py  environment.py
focusflow_env/: __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
focusflow_env/server/: Dockerfile  __init__.py  app.py  environment.py  requirements.txt
server/: app.py  environment.py  focusflow_environment.py
tasks/: __init__.py  easy.py  hard.py  medium.py
