[project]
name = "focusflow-openenv"
version = "0.1.0"
description = "FocusFlow OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core[core]>=0.2.1",
  "pydantic>=2.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "openai>=1.0.0",
]

[project.scripts]
server = "focusflow_openenv.server.app:main"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["focusflow_openenv", "focusflow_openenv.server"]
package-dir = { "focusflow_openenv" = ".", "focusflow_openenv.server" = "server" }
