[project]
name = "focusflow-openenv"
version = "0.1.0"
description = "FocusFlow OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core[core]>=0.2.1",
  "pydantic>=2.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "openai>=1.0.0",
]

[project.scripts]
openenv-server = "server.app:main"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server"]
package-dir = { "server" = "server" }
