[project]
name = "focusflow-env"
version = "0.1.0"
description = "FocusFlow OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.1.0",
  "pydantic>=2.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "openai>=1.0.0",
]

[project.scripts]
openenv-server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
